deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nest-product-api
  namespace: core
spec:
  selector:
    matchLabels:
      app: nest-product-api
  template:
    metadata:
      labels:
        app: nest-product-api
    spec:
      containers:
        - name: nest-product-api
          image: jdnielss/nest-product-api:v5
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3001
