service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nest-product-api
  namespace: core
spec:
  selector:
    app: nest-product-api
  ports:
    - port: 80
      targetPort: 3001
